# ChangeLog for net-www/lighttpd
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-www/lighttpd/Attic/ChangeLog,v 1.5 2004/04/27 20:38:54 agriffis Exp $

  27 Apr 2004; Aron Griffis <agriffis@gentoo.org> lighttpd-1.1.8.ebuild:
  Add inherit eutils

  25 Apr 2004; David Holm <dholm@gentoo.org> lighttpd-1.1.8.ebuild:
  Added to ~ppc.

  24 Apr 2004; Stuart Herbert <stuart@gentoo.org> lighttpd-1.1.8.ebuild:
  Replaced einstall (which doesn't work properly) with good ol' make install

  23 Apr 2004; Stuart Herbert <stuart@gentoo.org> lighttpd-1.1.8.ebuild,
  metadata.xml, files/lighttpd-1.1.8-gentoo.diff:
  Fixes to get the server running; thanks to Boris Wachtmeister
  <sirro@nurfuerspam.de> once again

*lighttpd-1.1.8 (23 Apr 2004)

  23 Apr 2004; Stuart Herbert <stuart@gentoo.org> lighttpd-1.1.8.ebuild,
  files/lighttpd-1.1.8-gentoo.diff, files/lighttpd.initd:
  Initial import; thanks to Boris <sirro@nurfuerspam.de>; see bug #46833
