@@ -1,6 +1,8 @@
 MD5 58653fc1a55f58e5fea7860412023fee lighttpd-1.1.8.ebuild 1935
+MD5 c5afcf233d7cb9d7083d42eb6181a02d ChangeLog 1187
 MD5 3d182d43f7f0341a9a42f96694f04e72 metadata.xml 224
-MD5 d902ad73106ca33afd398e06a2dfec19 ChangeLog 1008
+MD5 58653fc1a55f58e5fea7860412023fee lighttpd-1.1.8-r1.ebuild 1935
 MD5 eb94c0fc2149e2543beb50e93058de99 files/digest-lighttpd-1.1.8 66
 MD5 352e2fac9cb73bdae7672f977b044894 files/lighttpd-1.1.8-gentoo.diff 1301
-MD5 b23bbb2c34588e8946e5f7858f3fa2db files/lighttpd.initd 638
+MD5 b5761cabe02dbcc5f5deb98f7f8e1d64 files/lighttpd.initd 638
+MD5 eb94c0fc2149e2543beb50e93058de99 files/digest-lighttpd-1.1.8-r1 66
