@@ -1,7 +1,7 @@
 #!/sbin/runscript
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/lighttpd/files/Attic/lighttpd.initd,v 1.1 2004/04/23 17:30:26 stuart Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/lighttpd/files/Attic/lighttpd.initd,v 1.2 2004/04/28 23:00:37 stuart Exp $
 
 PID_FILE="/var/run/lighttpd.pid"
 LIGHTTPD_BIN="/usr/sbin/lighttpd"
@@ -23,7 +23,7 @@ start() {
 
 stop() {
 	ebegin "Stopping lighttpd"
-	RET=$?
 	kill `cat ${PID_FILE}`
+	RET=$?
 	eend ${RET}
 }
