@@ -1,6 +1,12 @@
 # ChangeLog for net-www/lighttpd
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/lighttpd/Attic/ChangeLog,v 1.5 2004/04/27 20:38:54 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/lighttpd/Attic/ChangeLog,v 1.6 2004/04/28 23:00:37 stuart Exp $
+
+*lighttpd-1.1.8-r1 (29 Apr 2004)
+
+  29 Apr 2004; Stuart Herbert <stuart@gentoo.org> lighttpd-1.1.8-r1.ebuild,
+  files/lighttpd.initd:
+  Fix for shutdown problems; see bug #46833
 
   27 Apr 2004; Aron Griffis <agriffis@gentoo.org> lighttpd-1.1.8.ebuild:
   Add inherit eutils
